# VinylVault

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: album_images.py  album_info.py  artist_info.py  config.py  data_cdn.py  database.py  database_sync.py  handlers.py  logger.py  main.py  migrate_avatars_to_s3.py  migrate_website_data_to_s3.py  models.py  pages.py  reupload_all_cdn.py  s3_async.py  s3_avatars.py  utils.py
website/: index.html  login.html  register.html  script.js  styles.css  user_page.html  user_page_example.html  welcome.html
website/data/users/: example.html
