[project]
name = "vinylvault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3==15.5.0",
    "aiofiles==24.1.0",
    "email-validator==2.2.0",
    "fastapi==0.115.5",
    "fastapi-cli==0.0.7",
    "httpx==0.28.1",
    "jinja2==3.1.5",
    "loguru==0.7.3",
    "motor==3.7.1",
    "orjson==3.10.14",
    "pydantic==2.10.2",
    "pydantic-extra-types==2.10.1",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "ujson==5.10.0",
    "uvicorn==0.32.1",
]
